cigionline/static/themes/dph/css/_basic_page.scss
body {
  @include top-bar($background-color: $dph-background);
  background-color: $dph-background;
  font-family: $dph-font;
  color: $white;

  p {
    font-family: $dph-font-copy;
    letter-spacing: 1px;
  }

  a {
    color: $dph-green;
  }

  header {
    .dph-banner {
      display: none;
    }

    &.banner-enabled {
      .main-navigation-wrapper {
        padding: 0.5rem 0;
      }

      .dph-banner {
        display: block;
        background-color: $dph-dark-green;
        color: $white;
        padding: 0.75rem 0;
        font-size: 1rem;
        font-weight: 500;

        p {
          @include link($color: $white, $hover-color: $cigi-primary-colour);
          margin-bottom: 0;
        }
      }
    }
  }

  .nav-tabs {
    border-bottom: 0;

    .nav-link {
      border: 0;
      border-radius: 0;
      padding: 0.25rem 1rem;

      &.active {
        background-color: transparent;
        border: 0;
        color: $cigi-text-grey;
        pointer-events: none;
      }

      &:hover {
        border: 0;
      }

      &:not(:last-child) {
        border-right: 1px solid $cigi-text-grey;
      }

      &:first-child {
        padding-left: 0;
      }

      &:last-child {
        padding-right: 0;
      }
    }
  }

  .hero {
    text-align: center;
    background-color: $dph-background;

    h1 {
      @include media-breakpoint-up(md) {
        font-size: 3.5rem;
      }
      @include media-breakpoint-up(lg) {
        font-size: 4.5rem;
      }
      @include media-breakpoint-up(xl) {
        font-size: 5.5rem;
      }
      font-size: 2.5rem;
      font-weight: 500;
      line-height: 1;
    }

    p {
      color: $cigi-medium-light-grey;
    }

    .nav-tabs {
      justify-content: center;
    }
  }

  .body {
    p {
      font-size: 15px;
      line-height: 1.6;
    }

    ul {
      padding-left: 1em;
    }

    li {
      font-family: $dph-font-copy;
      font-size: 15px;
      letter-spacing: 1px;
      padding-left: 1em;
    }

    h2 {
      width: 100%;
      font-size: 1.125rem;
      font-weight: 500;
      padding-top: 0.3rem;
      margin-top: 3rem;

      &:first-child {
        margin-top: 3rem;
      }
    }

    h3 {
      font-weight: 500;
      font-size: 1rem;
    }

    .stream-image-block {
      @include media-breakpoint-up(md) {
        width: 33%;
      }
      width: 50%;
    }

    .persons-list-block {
      .persons-list {
        @include link($color: $dph-green, $hover-color: $cigi-primary-colour);

        li {
          border-bottom: 1px solid $cigi-dark-line-grey;

          .person-name {
            font-weight: 500;
          }

          &:last-child {
            border-bottom: 0;
          }
        }

        .person-photo {
          .img-wrapper {
            border: 2px solid $dph-green;
            border-radius: 50%;
            background-color: $cigi-light-grey;

            img {
              border-radius: 50%;
            }
          }
        }

        .person-function {
          color: $cigi-medium-light-grey;
        }
      }
    }

    .program-information {
      .program-information-list {
        @include media-breakpoint-up(md) {
          display: flex;
        }

        list-style: none;
        padding: 0;

        li {
          padding: 0 1rem;

          &:not(:last-child) {
            border-right: 1px solid $cigi-text-grey;
          }

          &:first-child {
            padding-left: 0;
          }

          i {
            margin-right: 0.5rem;
          }
        }
      }
    }
  }

  .cohorts-buttons {
    margin-bottom: 2rem;
  }

  .publications-list-block {
    .publications-list__publication {
      padding: 2rem 0;

      &:not(:last-child) {
        border-bottom: 1px solid $cigi-text-grey;
      }

      .publications-list__publication__img {
        &:hover {
          img {
            scale: 1.025;
          }
        }

        img {
          border: 1px solid $cigi-medium-grey;
          transition: scale 0.2s ease;
        }
      }

      .publications-list__publication__right {
        display: flex;
        flex-direction: column;
        justify-content: space-between;

        h2 {
          @include link($color: $white, $hover-color: $cigi-primary-colour);
          font-size: 1.1rem;
          margin-top: 0;
        }

        p {
          font-size: 0.9rem;
          color: $cigi-medium-light-grey;
        }

        .publications-list__publication__author {
          display: flex;
          align-items: center;
          font-size: 15px;

          img {
            width: 70px;
            border-radius: 50%;
            border: 2px solid $dph-green;
            margin-right: 1rem;
          }

          h3 {
            font-size: 1.0625em;
            font-weight: 500;
            margin-bottom: 0;
          }

          .publications-list__publication__author__position {
            font-size: 0.9em;
            color: $cigi-medium-light-grey;
          }
        }
      }
    }
  }

  .additional-pages-block {
    padding-bottom: 3rem;

    .feature-content {
      border-bottom: 1px solid $cigi-text-grey;
      padding: 2rem 0;

      &:last-child {
        border-bottom: 0;
      }

      h3 {
        @include link($color: $white, $hover-color: $cigi-primary-colour);
        margin-top: 0;
      }

      .feature-content-date {
        color: $cigi-medium-light-grey;
      }
    }
  }

  &.dph-event-page,
  &.dph-article-page {
    .hero {
      padding-bottom: 0;

      h2 {
        font-size: 1.1rem;
        margin-bottom: 1rem;
      }

      h1 {
        @include media-breakpoint-up(md) {
          font-size: 2rem;
        }
        font-size: 1.5rem;
        line-height: 1.1;
        margin-bottom: 1rem;
      }

      .speakers {
        font-size: 0.9rem;
        font-weight: 400;
        margin-bottom: 1.5rem;

        ul {
          display: inline-flex;
          margin: 0;

          li {
            &:not(:only-child) {
              &::after {
                margin-right: 5px;
              }
            }
          }
        }
      }

      .subtitle {
        line-height: 1.2;
      }
    }
  }

  &.dph-publication-page {
    .publication-hero {
      h1 {
        color: $white;
      }

      h2,
      .date {
        color: $cigi-medium-light-grey;
      }

      .topics,
      .authors {
        @include link($color: $dph-green, $hover-color: $cigi-primary-colour);

        &.custom-text-list {
          li:not(:only-child) {
            &::after {
              color: $dph-green;
            }
          }
        }
      }
    }

    .about-the-author {
      h3 {
        border-top: 0;
        width: 100%;
        font-size: 1.125rem;
        font-weight: 500;
        text-transform: none;
      }

      .author-block {
        @include link($color: $dph-green, $hover-color: $cigi-primary-colour);
      }
    }

    .recommended-section {
      .recommended-dot {
        background-color: $cigi-medium-light-grey;
      }

      .custom-text-list {
        @include link($color: $dph-green, $hover-color: $cigi-primary-colour);

        li:not(:only-child) {
          color: $dph-green;

          &::after {
            color: $dph-green;
          }
        }
      }

      h3 {
        @include link($color: $white, $hover-color: $cigi-primary-colour);
      }

      .feature-content-date {
        color: $cigi-medium-light-grey;
      }

      .table-icon {
        color: $dph-green;
        border-color: $dph-green;
      }
    }
  }
}

.fellows-disclaimer {
  font-size: 15px;
  margin-bottom: 0;
}

